--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.1.0",
+    "react-bootstrap-table": "^4.1.3",
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.1.0",
     "react-http-request": "^1.0.3",
