--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.1",
     "react": "^16.1.0",
     "react-bootstrap-table": "^4.1.3",
+    "react-chartjs-2": "^2.6.4",
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.1.0",
     "react-http-request": "^1.0.3",
